--- a/.gitignore
+++ b/.gitignore
@@ -81,9 +81,12 @@ celerybeat-schedule
 # virtualenv
 venv/
 ENV/
+venv-ubuntu
 
 # Spyder project settings
 .spyderproject
 
 # Rope project settings
 .ropeproject
+
+.idea/
