added string events; added tests

--- a/events_config.json
+++ b/events_config.json
@@ -1,30 +1,34 @@
 {
-    "0": {
-        "type": "DEVICE_STARTED",
-        "data": {}
-    },
-    "1": {
-        "type":"RADIO_STATE",
-        "data": {
-            "is_on": "B"
-        }
-    },
-    "2": {
-        "type":"ADVERTISING_STATE",
-        "data": {
-            "is_on": "B"
-        }
-    },
-    "3": {
-        "type": "BATTERY_LEVEL",
-        "data": {
-          "level": "B"
-        }
-      },
-    "4": {
-        "type": "BLE_STATE",
-        "data": {
-            "is_connected": "B"
-        }
+  "0": {
+    "type": "DEVICE_BOOT",
+    "strings": ["version"]
+  },
+  "1": {
+    "type":"RADIO_STATE",
+    "data": {
+      "is_on": "B"
     }
+  },
+  "2": {
+    "type":"ADVERTISING_STATE",
+    "data": {
+      "is_on": "B"
+    }
+  },
+  "3": {
+    "type": "BATTERY_LEVEL",
+    "data": {
+      "level": "B"
+    }
+  },
+  "4": {
+    "type": "BLE_STATE",
+    "data": {
+      "is_connected": "B"
+    }
+  },
+  "5": {
+    "type": "CUSTOM_STRING",
+    "strings": ["custom_string"]
+  }
 }
